--- a/ui.apps/src/main/content/jcr_root/apps/asset-share-commons/components/details/image/image.html
+++ b/ui.apps/src/main/content/jcr_root/apps/asset-share-commons/components/details/image/image.html
@@ -30,7 +30,7 @@
              src="${image.src}"
              style="max-height:${maxHeight @ context = 'styleToken'}px;"
              data-asset-share-fallback="${image.fallback}"
-             data-sly-test.maxHeight="${properties['maxHeight']}"/>
+             data-sly-test.maxHeight="${image.maxHeight}"/>
 
         <!--/* Img element without a max height */-->
         <img class="ui centered image cmp-image
