--- a/ui.apps/src/main/content/jcr_root/apps/asset-share-commons/components/search/filter-toggle/filter-toggle.html
+++ b/ui.apps/src/main/content/jcr_root/apps/asset-share-commons/components/search/filter-toggle/filter-toggle.html
@@ -17,25 +17,26 @@
  */-->
 
 <sly data-sly-use.modelCache="com.adobe.aem.commons.assetshare.util.ModelCache"
-     data-sly-use.placeholderTemplate="core/wcm/components/commons/v1/templates.html"
+     data-sly-use.filterToggle="com.adobe.aem.commons.assetshare.components.search.FilterToggle"
      data-sly-set.pagePredicate="${modelCache['com.adobe.aem.commons.assetshare.components.predicates.PagePredicate']}"
+     data-sly-use.placeholderTemplate="core/wcm/components/commons/v1/templates.html"
      data-sly-use.togglesTemplate="templates/toggles.html"
-     data-sly-test.hideLabels="${properties['hideLabels']}"></sly>
+     data-sly-test.hideLabels="${filterToggle.hideLabels}"></sly>
 
 <div data-sly-test.ready="${pagePredicate}"
         class="ui basic segment">
     <div class="ui column grid"
-         data-sly-test.showApplyFilterToggle="${!properties['hideApplyFilterToggle']}">
+         data-sly-test.showApplyFilterToggle="${!filterToggle.hideApplyFilterToggle}">
         <div class="eight wide column"
-             data-sly-call="${togglesTemplate.apply @ label = properties['applyFilterLabel'], hideLabels = hideLabels, pagePredicate = pagePredicate}">
+             data-sly-call="${togglesTemplate.apply @ label = filterToggle.applyFilterLabel, hideLabels = hideLabels, pagePredicate = pagePredicate}">
         </div>
 
         <div class="eight wide column"
-            data-sly-call="${togglesTemplate.reset @ label = properties['resetFilterLabel'], hideLabels = hideLabels, currentPage = currentPage}">
+            data-sly-call="${togglesTemplate.reset @ label = filterToggle.resetFilterLabel, hideLabels = hideLabels, currentPage = currentPage}">
         </div>
     </div>
     <div data-sly-test="${!showApplyFilterToggle}"
-         data-sly-call="${togglesTemplate.reset @ label = properties['resetFilterLabel'], hideLabels = hideLabels, currentPage = currentPage}">
+         data-sly-call="${togglesTemplate.reset @ label = filterToggle.resetFilterLabel, hideLabels = hideLabels, currentPage = currentPage}">
     </div>
 </div>
 <sly data-sly-call="${placeholderTemplate.placeholder @ isEmpty=!ready}"></sly>
