--- a/ui.apps/src/main/content/jcr_root/apps/asset-share-commons/components/details/renditions/renditions.html
+++ b/ui.apps/src/main/content/jcr_root/apps/asset-share-commons/components/details/renditions/renditions.html
@@ -17,14 +17,14 @@
  */-->
 
 <sly data-sly-use.modelCache="com.adobe.aem.commons.assetshare.util.ModelCache"
-     data-sly-test.config="${modelCache['com.adobe.aem.commons.assetshare.configuration.Config']}"
-     data-sly-test.asset="${modelCache['com.adobe.aem.commons.assetshare.content.AssetModel']}"
+     data-sly-set.config="${modelCache['com.adobe.aem.commons.assetshare.configuration.Config']}"
+     data-sly-set.asset="${modelCache['com.adobe.aem.commons.assetshare.content.AssetModel']}"
      data-sly-use.renditions="com.adobe.aem.commons.assetshare.components.details.Renditions"
      data-sly-use.placeholderTemplate="core/wcm/components/commons/v1/templates.html"
      data-sly-test.ready="${renditions.ready}">
 
     <div class="ui basic segment">
-        <h4 class="ui header" data-sly-test="${!properties['hideLabel']}">${properties['label']}</h4>
+        <h4 class="ui header" data-sly-test="${!renditions.hideLabel}">${renditions.label}</h4>
 
         <div class="ui labels"
              data-sly-list.rendition="${renditions.renditions}">
