--- a/ui.apps/src/main/content/jcr_root/apps/asset-share-commons/components/details/tags/tags.html
+++ b/ui.apps/src/main/content/jcr_root/apps/asset-share-commons/components/details/tags/tags.html
@@ -17,15 +17,15 @@
  */-->
 
 <sly data-sly-use.modelCache="com.adobe.aem.commons.assetshare.util.ModelCache"
-     data-sly-test.asset="${modelCache['com.adobe.aem.commons.assetshare.content.AssetModel']}"
+     data-sly-set.asset="${modelCache['com.adobe.aem.commons.assetshare.content.AssetModel']}"
      data-sly-use.field="com.adobe.aem.commons.assetshare.components.details.Tags"
      data-sly-use.placeholderTemplate="core/wcm/components/commons/v1/templates.html"
      data-sly-test.ready="${field.ready}">
 
     <div class="ui basic segment">
-        <h4 class="ui header" data-sly-test="${!properties['hideLabel']}">${properties['label']}</h4>
+        <h4 class="ui header" data-sly-test="${!field.hideLabel}">${field.label}</h4>
 
-        <p data-sly-test.empty="${field.tagTitles.size == 0}">${properties['emptyText']}</p>
+        <p data-sly-test.empty="${field.tagTitles.size == 0}">${field.emptyText}</p>
 
         <div class="ui labels"
              data-sly-list.tagTitle="${field.tagTitles}">
